imangenes arregladas, pero hay problema con las constancias

--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_constanciaservicios.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_constanciaservicios.jrxml
@@ -12,6 +12,9 @@
 	<parameter name="CODIGO" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
+        <parameter name="IMAGE_PATH" class="java.lang.String">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
 	<queryString>
 		<![CDATA[SELECT e.nombreempleado,c.fechainiciocontrato,c.fechafincontrato,c.plazanominal,el.nombreinstitucion,c.salarioactual,c.sistemapago, CURRENT_DATE from empleado e inner join contrato c on e.codigoempleado=c.codigoempleado inner join empleadoexperiencialaboral ee on e.codigoempleado = ee.codigoempleado inner join experiencialaboral el
  on ee.codigoexperiencialaboral=el.codigoexperiencialaboral
@@ -87,25 +90,41 @@
 				<text><![CDATA[Constancia de Tiempo de Servicios]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="426" y="5" width="100" height="20" uuid="5a449a22-2142-476b-807a-f6013bc9c602"/>
+				<reportElement x="432" y="5" width="100" height="20" uuid="5a449a22-2142-476b-807a-f6013bc9c602"/>
 				<textElement>
 					<font fontName="Times New Roman" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="425" y="28" width="80" height="20" uuid="c1b75018-01ca-4993-a39d-170b10b715f9"/>
+				<reportElement x="431" y="28" width="80" height="20" uuid="c1b75018-01ca-4993-a39d-170b10b715f9"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Page "+$V{PAGE_NUMBER}+" of"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="505" y="28" width="40" height="20" uuid="b2bf9453-1665-4f06-b652-eaee37e52a26"/>
+				<reportElement x="511" y="28" width="40" height="20" uuid="b2bf9453-1665-4f06-b652-eaee37e52a26"/>
 				<textElement>
 					<font fontName="Times New Roman" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="129" y="28" width="42" height="20" uuid="244ca124-ff83-4f3d-ba32-3c3bc5d68fcf"/>
+				<text><![CDATA[Desde:]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="326" y="28" width="39" height="20" uuid="5f9b6fea-0c6e-4a06-8f92-5aaf4dcc1753"/>
+				<text><![CDATA[Hasta:]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="173" y="28" width="100" height="20" uuid="8e6536ec-e9b9-4f5b-93be-086c61db0435"/>
+				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="364" y="28" width="100" height="20" uuid="2cd14b2a-8134-4ba7-ba68-e54703e0e432"/>
+				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
