--- a/src/main/resources/templates/fragments/otherreports/1misionesexternasreport.html
+++ b/src/main/resources/templates/fragments/otherreports/1misionesexternasreport.html
@@ -16,7 +16,7 @@
                 <form class="form-horizontal" id="formreport">
 
                     <div class="form-group">
-                        <label class="col-sm-3 control-label" >Codigo Mision:</label>
+                        <label class="col-sm-3 control-label" >Codigo Mision Externa:</label>
                         <div class="col-sm-8">
                             <input type="text" class="form-control" id="codigo" name="codigo"/>
                         </div>
