--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_constanciasalariales.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_constanciasalariales.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="c3d8ea19-1295-4cd5-beff-28727f321760">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="288"/>
 	<parameter name="CODIGO" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
@@ -10,6 +10,9 @@
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<parameter name="FECHAFIN" class="java.lang.String">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
+	<parameter name="IMAGE_PATH" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
@@ -53,7 +56,7 @@ c.fechafincontrato <= $P{FECHAFIN}]]>
 	<title>
 		<band height="98" splitType="Stretch">
 			<staticText>
-				<reportElement x="233" y="20" width="173" height="20" uuid="92646f55-b86a-406f-b483-3937bdd29a9a"/>
+				<reportElement x="208" y="20" width="173" height="20" uuid="92646f55-b86a-406f-b483-3937bdd29a9a"/>
 				<textElement>
 					<font fontName="Times New Roman" size="12"/>
 				</textElement>
@@ -64,18 +67,18 @@ c.fechafincontrato <= $P{FECHAFIN}]]>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("GOES.jpg")]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement x="287" y="64" width="64" height="20" uuid="598b059c-c836-4d9a-9f00-aa02191a6297"/>
+				<reportElement x="262" y="64" width="64" height="20" uuid="598b059c-c836-4d9a-9f00-aa02191a6297"/>
 				<textElement>
 					<font fontName="Times New Roman" size="12"/>
 				</textElement>
 				<text><![CDATA[SISADMRH]]></text>
 			</staticText>
 			<image>
-				<reportElement x="429" y="10" width="138" height="75" uuid="5c0dc2e5-e621-4b10-9ac0-846fbb6f34d2"/>
+				<reportElement x="459" y="10" width="138" height="75" uuid="5c0dc2e5-e621-4b10-9ac0-846fbb6f34d2"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("LOGOMJ.jpg")]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement x="234" y="43" width="173" height="20" uuid="ff0ff36a-d21b-48a0-8a36-d2f2e3e11abd"/>
+				<reportElement x="209" y="43" width="173" height="20" uuid="ff0ff36a-d21b-48a0-8a36-d2f2e3e11abd"/>
 				<textElement>
 					<font fontName="Times New Roman" size="12"/>
 				</textElement>
@@ -86,7 +89,7 @@ c.fechafincontrato <= $P{FECHAFIN}]]>
 	<pageHeader>
 		<band height="52" splitType="Stretch">
 			<staticText>
-				<reportElement x="222" y="0" width="100" height="20" uuid="ce3f3878-6d02-4709-a00e-5a40b03d9145"/>
+				<reportElement x="227" y="8" width="100" height="20" uuid="ce3f3878-6d02-4709-a00e-5a40b03d9145"/>
 				<text><![CDATA[Constancia Salarial]]></text>
 			</staticText>
 			<textField>
@@ -106,19 +109,32 @@ c.fechafincontrato <= $P{FECHAFIN}]]>
 				<reportElement x="411" y="8" width="40" height="20" uuid="88e9db8a-3a8b-4174-91e8-ad4201c9bf97"/>
 				<text><![CDATA[Fecha:]]></text>
 			</staticText>
+			<staticText>
+				<reportElement x="155" y="29" width="29" height="20" uuid="2a809ba7-8a89-4d40-81ff-a2d55dd8ad25"/>
+				<text><![CDATA[Desde:]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="320" y="32" width="31" height="20" uuid="b0cf2130-63f4-45e8-9c29-55570e8b5584"/>
+				<text><![CDATA[Hasta:]]></text>
+			</staticText>
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="37" splitType="Stretch"/>
+		<band height="37" splitType="Stretch">
+			<staticText>
+				<reportElement x="237" y="2" width="100" height="20" uuid="d88d12eb-c71f-4e93-b491-5188e677b8e4"/>
+				<text><![CDATA[salarioactual]]></text>
+			</staticText>
+		</band>
 	</columnHeader>
 	<detail>
 		<band height="475" splitType="Stretch">
 			<textField>
-				<reportElement x="219" y="131" width="100" height="20" uuid="2594a749-d098-4153-a851-764ef1d2189a"/>
+				<reportElement x="219" y="111" width="100" height="20" uuid="2594a749-d098-4153-a851-764ef1d2189a"/>
 				<textFieldExpression><![CDATA[$F{salarioactual}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="358" y="50" width="37" height="20" uuid="32dd24b0-40eb-44b4-94bb-1cac1864040e"/>
+				<reportElement x="358" y="47" width="37" height="20" uuid="32dd24b0-40eb-44b4-94bb-1cac1864040e"/>
 				<text><![CDATA[Hasta]]></text>
 			</staticText>
 			<staticText>
@@ -136,11 +152,11 @@ c.fechafincontrato <= $P{FECHAFIN}]]>
 				<text><![CDATA[Monto Descuento]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="122" y="107" width="289" height="20" uuid="e91249a5-333d-49e7-8d29-2a31bfe740a1"/>
+				<reportElement x="122" y="88" width="289" height="20" uuid="e91249a5-333d-49e7-8d29-2a31bfe740a1"/>
 				<textFieldExpression><![CDATA[$F{plazanominal}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="23" y="107" width="99" height="20" uuid="54457909-65e6-4704-b5d1-844a187a951e"/>
+				<reportElement x="23" y="88" width="99" height="20" uuid="54457909-65e6-4704-b5d1-844a187a951e"/>
 				<text><![CDATA[En plaza Nominal]]></text>
 			</staticText>
 			<staticText>
@@ -148,19 +164,19 @@ c.fechafincontrato <= $P{FECHAFIN}]]>
 				<text><![CDATA[Salario Actual]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="246" y="47" width="100" height="20" uuid="a21164c6-2108-400b-b435-ca24810cac79"/>
+				<reportElement x="246" y="44" width="100" height="20" uuid="a21164c6-2108-400b-b435-ca24810cac79"/>
 				<textFieldExpression><![CDATA[$F{fechainiciocontrato}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="23" y="80" width="280" height="20" uuid="9fc4e39f-3ab4-4505-843f-3606bfbceece"/>
+				<reportElement x="23" y="66" width="280" height="20" uuid="9fc4e39f-3ab4-4505-843f-3606bfbceece"/>
 				<text><![CDATA[ambas fechas inclusive, nombrado por el sistema de pago]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="311" y="80" width="223" height="20" uuid="503fdbdc-5d79-4019-b363-68c38ec4c8a1"/>
+				<reportElement x="311" y="66" width="223" height="20" uuid="503fdbdc-5d79-4019-b363-68c38ec4c8a1"/>
 				<textFieldExpression><![CDATA[$F{sistemapago}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="23" y="127" width="180" height="20" uuid="5b35b726-f3c3-4861-a2c3-9770f0a5898f"/>
+				<reportElement x="23" y="109" width="180" height="20" uuid="5b35b726-f3c3-4861-a2c3-9770f0a5898f"/>
 				<text><![CDATA[debengando un salario mensual de $]]></text>
 			</staticText>
 			<textField>
@@ -183,50 +199,50 @@ c.fechafincontrato <= $P{FECHAFIN}]]>
 				<text><![CDATA[Detalle]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="23" y="49" width="211" height="20" uuid="5c578b41-1eda-4319-bc5f-569e9fb204a0"/>
+				<reportElement x="23" y="46" width="211" height="20" uuid="5c578b41-1eda-4319-bc5f-569e9fb204a0"/>
 				<text><![CDATA[Presta servicios para Esta Institucion desde]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="410" y="49" width="100" height="20" uuid="cec94d89-d6d1-40a0-8bdf-e2f7b95dadc7"/>
+				<reportElement x="410" y="46" width="100" height="20" uuid="cec94d89-d6d1-40a0-8bdf-e2f7b95dadc7"/>
 				<textFieldExpression><![CDATA[$F{fechafincontrato}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="23" y="147" width="236" height="20" uuid="841a6bd5-3499-46dd-b78c-e31e162bd484"/>
+				<reportElement x="23" y="129" width="236" height="20" uuid="841a6bd5-3499-46dd-b78c-e31e162bd484"/>
 				<text><![CDATA[A quien se le efectuan los siguientes descuentos]]></text>
 			</staticText>
 			<line>
 				<reportElement x="13" y="261" width="521" height="1" uuid="2f4d20a4-14b8-4b75-a87f-22901b8b53ba"/>
 			</line>
 			<staticText>
-				<reportElement x="26" y="306" width="123" height="20" uuid="7b58c940-09ca-4b12-a197-4f8e2b12a62a"/>
+				<reportElement x="26" y="298" width="123" height="20" uuid="7b58c940-09ca-4b12-a197-4f8e2b12a62a"/>
 				<text><![CDATA[Y para ser presentado a]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="234" y="269" width="100" height="20" uuid="e6b0a571-a1c9-42ec-88d8-24f0c0dbe765"/>
+				<reportElement x="234" y="271" width="100" height="20" uuid="e6b0a571-a1c9-42ec-88d8-24f0c0dbe765"/>
 				<textFieldExpression><![CDATA[$F{Total}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="406" y="306" width="124" height="20" uuid="b396a1cf-e2bc-4bf9-b663-3569a46275af"/>
+				<reportElement x="406" y="298" width="124" height="20" uuid="b396a1cf-e2bc-4bf9-b663-3569a46275af"/>
 				<text><![CDATA[Se extiende la presente,]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="141" y="356" width="100" height="20" uuid="59244405-bcef-4062-8c57-4f18e311af34"/>
+				<reportElement x="141" y="341" width="100" height="20" uuid="59244405-bcef-4062-8c57-4f18e311af34"/>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="159" y="306" width="224" height="20" uuid="9b510229-d1ed-48d5-b380-dba95ef301d1"/>
+				<reportElement x="159" y="298" width="224" height="20" uuid="9b510229-d1ed-48d5-b380-dba95ef301d1"/>
 				<textFieldExpression><![CDATA[$F{nombreinstitucion}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="26" y="332" width="504" height="20" uuid="edfbcea5-594c-4379-a28c-250c8f42c0ab"/>
+				<reportElement x="26" y="317" width="504" height="20" uuid="edfbcea5-594c-4379-a28c-250c8f42c0ab"/>
 				<text><![CDATA[La cual tendra validez en original, sin tachaduras por un periodo de treinta días dada en la ciudad de ]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="27" y="357" width="100" height="20" uuid="44e82157-3dde-4add-9f7e-a30f8da7ad25"/>
+				<reportElement x="27" y="342" width="100" height="20" uuid="44e82157-3dde-4add-9f7e-a30f8da7ad25"/>
 				<text><![CDATA[San Salvador,]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="30" y="387" width="154" height="20" uuid="94b0d78d-9057-4772-8f5a-608564efff7a"/>
+				<reportElement x="30" y="367" width="154" height="20" uuid="94b0d78d-9057-4772-8f5a-608564efff7a"/>
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
@@ -239,6 +255,10 @@ c.fechafincontrato <= $P{FECHAFIN}]]>
 				</textElement>
 				<text><![CDATA[Total]]></text>
 			</staticText>
+			<textField>
+				<reportElement x="222" y="209" width="100" height="20" uuid="cc041996-fd55-47b2-817e-9ec97e909145"/>
+				<textFieldExpression><![CDATA[$F{salarioactual}]]></textFieldExpression>
+			</textField>
 		</band>
 	</detail>
 	<columnFooter>
