--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_misionesexternas1.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_misionesexternas1.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="792" pageHeight="612" orientation="Landscape" columnWidth="752" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="2dcbe6cb-3379-4a1c-aaae-d0184a031b8a">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="90"/>
+	<property name="ireport.y" value="4"/>
 	<parameter name="CODIGO" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
@@ -10,6 +10,9 @@
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<parameter name="FECHAFIN" class="java.lang.String">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
+	<parameter name="IMAGE_PATH" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
@@ -65,6 +68,14 @@ AND m.fecharegresomision<=$P{FECHAFIN}]]>
 				<reportElement x="291" y="13" width="211" height="20" uuid="f50d78a8-a977-48ac-bf88-3ae6b985e0cd"/>
 				<text><![CDATA[Ministerio de Justicia  y Segurdiad Pública]]></text>
 			</staticText>
+			<image>
+				<reportElement x="17" y="7" width="174" height="58" uuid="63395dac-30f9-4fa7-8988-9d589797cf45"/>
+				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
+			</image>
+			<image>
+				<reportElement x="596" y="2" width="146" height="70" uuid="2e6469f8-63c6-4047-a732-8318b13ccf9f"/>
+				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
+			</image>
 		</band>
 	</title>
 	<pageHeader>
@@ -95,12 +106,12 @@ AND m.fecharegresomision<=$P{FECHAFIN}]]>
 				<text><![CDATA[Hasta]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="262" y="30" width="100" height="20" uuid="157d6ca8-db16-4416-a40c-9681b080f868"/>
-				<textFieldExpression><![CDATA[$F{fechasalidamision}]]></textFieldExpression>
+				<reportElement x="249" y="28" width="100" height="20" uuid="157d6ca8-db16-4416-a40c-9681b080f868"/>
+				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="482" y="24" width="100" height="20" uuid="28a7eb53-2bf2-479c-b191-287e3b9f0308"/>
-				<textFieldExpression><![CDATA[$F{fecharegresomision}]]></textFieldExpression>
+				<reportElement x="477" y="23" width="100" height="20" uuid="965e147f-6e74-408c-8aba-1514c8fcb4f0"/>
+				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
