--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_misionesinternas.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_misionesinternas.jrxml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="9e2a8e50-efd2-42d9-ab62-dda75ce1c952">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="96"/>
-	<parameter name="FACHAINICIO" class="java.lang.String">
+	<property name="ireport.x" value="84"/>
+	<property name="ireport.y" value="8"/>
+	<parameter name="FECHAINICIO" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<parameter name="FECHAFIN" class="java.lang.String">
@@ -12,9 +12,11 @@
 	<parameter name="CODIGO" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
+	<parameter name="IMAGE_PATH" class="java.lang.String">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
 	<queryString>
-		<![CDATA[select count(m.codigomision) totalRegistros, e.nombreempleado,p.nombrepuesto,m.nombremision,m.objetivomision,m.fechasalidamision,m.fecharegresomision,m.departamentomision from empleado e inner join empleadopuesto ep on e.codigopuesto=ep.codigopuesto inner join puesto p on ep.codigopuesto=p.codigopuesto inner join empleadomision em on e.codigoempleado=em.codigoempleado inner join mision m on em.codigomision=m.codigomision
-]]>
+		<![CDATA[select count(m.codigomision) totalRegistros, e.nombreempleado,p.nombrepuesto,m.nombremision,m.objetivomision,m.fechasalidamision,m.fecharegresomision,m.departamentomision from empleado e inner join empleadopuesto ep on e.codigopuesto=ep.codigopuesto inner join puesto p on ep.codigopuesto=p.codigopuesto inner join empleadomision em on e.codigoempleado=em.codigoempleado inner join mision m on em.codigomision=m.codigomision]]>
 	</queryString>
 	<field name="totalRegistros" class="java.lang.Long"/>
 	<field name="nombreempleado" class="java.lang.String">
@@ -42,7 +44,7 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="79" splitType="Stretch">
+		<band height="78" splitType="Stretch">
 			<staticText>
 				<reportElement x="297" y="8" width="208" height="20" uuid="a8d5cebb-86ae-4957-aae0-f594effd500b"/>
 				<textElement>
@@ -64,44 +66,45 @@
 				</textElement>
 				<text><![CDATA[SISADMRH]]></text>
 			</staticText>
+			<image>
+				<reportElement x="20" y="10" width="175" height="65" uuid="3f000636-25b3-4ab1-a605-f3aabc530c47"/>
+				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
+			</image>
+			<image>
+				<reportElement x="610" y="10" width="170" height="65" uuid="38e8ef67-aff0-4fb6-8785-1877e476876d"/>
+				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
+			</image>
 		</band>
 	</title>
 	<pageHeader>
-		<band height="70" splitType="Stretch">
+		<band height="67" splitType="Stretch">
 			<staticText>
-				<reportElement x="345" y="10" width="160" height="20" uuid="d7053db9-171b-457a-a4e9-0f8ae937173a"/>
+				<reportElement x="349" y="25" width="104" height="20" uuid="d7053db9-171b-457a-a4e9-0f8ae937173a"/>
 				<textElement>
 					<font fontName="Times New Roman" size="12"/>
 				</textElement>
-				<text><![CDATA[Reporte de Misiones Internas]]></text>
+				<text><![CDATA[Misiones Internas]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="247" y="47" width="44" height="20" uuid="fba48178-f73d-4d13-81b1-90bc0e80d668"/>
+				<reportElement x="237" y="46" width="40" height="20" uuid="fba48178-f73d-4d13-81b1-90bc0e80d668"/>
 				<textElement>
 					<font fontName="Times New Roman" size="12"/>
 				</textElement>
 				<text><![CDATA[Desde]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="514" y="45" width="47" height="20" uuid="99f1e0a5-532a-4117-9a08-9aa582116b6b"/>
+				<reportElement x="464" y="45" width="47" height="20" uuid="99f1e0a5-532a-4117-9a08-9aa582116b6b"/>
 				<textElement>
 					<font fontName="Times New Roman" size="12"/>
 				</textElement>
 				<text><![CDATA[Hasta]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="648" y="10" width="43" height="20" uuid="26170632-5ffd-4de4-9345-a1135898aeae"/>
+				<reportElement x="655" y="10" width="43" height="20" uuid="26170632-5ffd-4de4-9345-a1135898aeae"/>
 				<textElement>
 					<font fontName="Times New Roman" size="12"/>
 				</textElement>
 				<text><![CDATA[Fecha:]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="648" y="34" width="43" height="20" uuid="bb9ab94f-3935-4c79-bf4e-7536dc0d545c"/>
-				<textElement>
-					<font fontName="Times New Roman" size="12"/>
-				</textElement>
-				<text><![CDATA[Pagina]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yyyy">
 				<reportElement x="698" y="10" width="100" height="20" uuid="9868b668-743d-4c56-b332-6b8010010281"/>
@@ -111,81 +114,81 @@
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="680" y="34" width="80" height="20" uuid="9298a98d-7fbf-4ceb-9de8-3536aee1c13b"/>
+				<reportElement x="653" y="34" width="70" height="20" uuid="9298a98d-7fbf-4ceb-9de8-3536aee1c13b"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="12"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Page "+$V{PAGE_NUMBER}+" of"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="760" y="34" width="40" height="20" uuid="19e65be8-4c9b-4417-8c85-f6561c3763e9"/>
+				<reportElement x="730" y="34" width="30" height="20" uuid="19e65be8-4c9b-4417-8c85-f6561c3763e9"/>
 				<textElement>
 					<font fontName="Times New Roman" size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="303" y="47" width="100" height="20" uuid="9c862b30-3b82-4997-86fd-9fb9f2258c14"/>
+				<reportElement x="278" y="47" width="88" height="20" uuid="9c862b30-3b82-4997-86fd-9fb9f2258c14"/>
 				<textElement>
-					<font fontName="Times New Roman" size="12"/>
+					<font fontName="Times New Roman" size="10"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{fechasalidamision}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="566" y="48" width="100" height="20" uuid="8980f0e0-9de2-4aa1-a56f-f0c3caafdb16"/>
+				<reportElement x="507" y="47" width="100" height="20" uuid="8980f0e0-9de2-4aa1-a56f-f0c3caafdb16"/>
 				<textElement>
-					<font fontName="Times New Roman" size="12"/>
+					<font fontName="Times New Roman" size="10"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{fecharegresomision}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="61" splitType="Stretch">
+		<band height="27" splitType="Stretch">
 			<staticText>
-				<reportElement x="26" y="30" width="59" height="20" uuid="938d790d-6b9d-4af6-8c5f-30a8035aa622"/>
+				<reportElement x="26" y="0" width="59" height="20" uuid="938d790d-6b9d-4af6-8c5f-30a8035aa622"/>
 				<textElement>
 					<font fontName="Times New Roman" size="12"/>
 				</textElement>
 				<text><![CDATA[Empleado]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="151" y="28" width="45" height="20" uuid="9132f985-7e2e-4665-b844-dbc536e18415"/>
+				<reportElement x="151" y="0" width="45" height="20" uuid="9132f985-7e2e-4665-b844-dbc536e18415"/>
 				<textElement>
 					<font fontName="Times New Roman" size="12"/>
 				</textElement>
 				<text><![CDATA[Puesto]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="276" y="28" width="52" height="20" uuid="8cb599ec-5f63-4ed1-99f1-1aa16d4e9d95"/>
+				<reportElement x="276" y="0" width="52" height="20" uuid="8cb599ec-5f63-4ed1-99f1-1aa16d4e9d95"/>
 				<textElement>
 					<font fontName="Times New Roman" size="12"/>
 				</textElement>
 				<text><![CDATA[Mision]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="377" y="30" width="55" height="20" uuid="b9958f6d-f205-489c-8bcf-14307b18299c"/>
+				<reportElement x="377" y="0" width="55" height="20" uuid="b9958f6d-f205-489c-8bcf-14307b18299c"/>
 				<textElement>
 					<font fontName="Times New Roman" size="12"/>
 				</textElement>
 				<text><![CDATA[Objetivo]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="495" y="30" width="81" height="20" uuid="3bf28f6b-dbc1-456e-81b1-36c8e0bef1f6"/>
+				<reportElement x="495" y="0" width="90" height="20" uuid="3bf28f6b-dbc1-456e-81b1-36c8e0bef1f6"/>
 				<textElement>
 					<font fontName="Times New Roman" size="12"/>
 				</textElement>
 				<text><![CDATA[Deparatamento]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="614" y="30" width="64" height="20" uuid="97387aca-cd7f-4443-958e-68c3cc3ee73e"/>
+				<reportElement x="614" y="0" width="64" height="20" uuid="97387aca-cd7f-4443-958e-68c3cc3ee73e"/>
 				<textElement>
 					<font fontName="Times New Roman" size="12"/>
 				</textElement>
 				<text><![CDATA[Desde]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="721" y="30" width="74" height="20" uuid="6f7f69f8-0340-4226-9155-2923b07ba1fa"/>
+				<reportElement x="721" y="2" width="74" height="20" uuid="6f7f69f8-0340-4226-9155-2923b07ba1fa"/>
 				<textElement>
 					<font fontName="Times New Roman" size="12"/>
 				</textElement>
@@ -225,7 +228,7 @@
 			</textField>
 			<textField>
 				<reportElement x="485" y="0" width="100" height="20" uuid="aa722cd9-54ef-47d5-8052-7daf433e83ea"/>
-				<textElement>
+				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="10"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{departamentomision}]]></textFieldExpression>
