--- a/src/main/resources/templates/fragments/otherreports/comitesreport.html
+++ b/src/main/resources/templates/fragments/otherreports/comitesreport.html
@@ -16,7 +16,7 @@
                 <form class="form-horizontal" id="formreport" th:object="${comites}">
 
                     <div class="form-group">
-                        <label class="col-sm-3 control-label" >Codigo comite:</label>
+                        <label class="col-sm-3 control-label" >Nombre Comite:</label>
                         <div class="col-sm-8">
                             <select class="form-control" id="codigo" name="codigo">
                             <option value="0">-- Seleccione un comite --</option>
