--- a/src/main/resources/templates/fragments/capacitacion/capacitacionesreport.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitacionesreport.html
@@ -12,12 +12,16 @@
         <div class="col-md-8">
             <h3>GENERACION DE REPORTE DE CAPACITACIONES</h3>
             <div>
-                <form class="form-horizontal" id="formcapacitacion">
+                <form class="form-horizontal" id="formcapacitacion" th:object="${capacitaciones}">
 
-                    <div class="form-group">
-                        <label class="col-sm-3 control-label" >Codigo de capacitacion:</label>
+                   <div class="form-group">
+                        <label class="col-sm-3 control-label" >Nombre Capacitacion:</label>
                         <div class="col-sm-8">
-                            <input type="text" class="form-control" id="codigo" name="codigo"/>
+                            <select class="form-control" id="codigo" name="codigo">
+                            <option value="0">-- Seleccione la Capacitacion --</option>
+                            <option th:each="d:${capacitaciones}" th:value="${d.codigocapacitacion}" th:text="${d.nombrecapacitacion}"></option>
+                            </select>
+                            <!--<input type="text" class="form-control" id="codigo" name="codigo"/>-->
                         </div>
                     </div>
                      <div class="form-group">    
