--- a/src/main/resources/templates/fragments/comite/comitesreport.html
+++ b/src/main/resources/templates/fragments/comite/comitesreport.html
@@ -12,12 +12,16 @@
         <div class="col-md-8">
             <h3>GENERACION DE REPORTE DE COMITES</h3>
             <div>
-                <form class="form-horizontal" id="formcomite">
+                 <form class="form-horizontal" id="formcomite" th:object="${comites}">
 
                     <div class="form-group">
-                        <label class="col-sm-3 control-label" >Codigo de comite:</label>
+                        <label class="col-sm-3 control-label" >Nombre Comite:</label>
                         <div class="col-sm-8">
-                            <input type="text" class="form-control" id="codigo" name="codigo"/>
+                            <select class="form-control" id="codigo" name="codigo">
+                            <option value="0">-- Seleccione un comite --</option>
+                            <option th:each="d:${comites}" th:value="${d.codigocomite}" th:text="${d.nombrecomite}"></option>
+                            </select>
+                            <!--<input type="text" class="form-control" id="codigo" name="codigo"/>-->
                         </div>
                     </div>
                      <div class="form-group">    
