--- a/src/main/resources/templates/fragments/costocapacitacion/costocapacitacionform.html
+++ b/src/main/resources/templates/fragments/costocapacitacion/costocapacitacionform.html
@@ -40,9 +40,10 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">codigo de Capacitacion:</label>
+                <label class="col-sm-2 control-label">Capacitacion:</label>
                 <div class="col-sm-10">
                     <select class="form-control" th:field="*{codigocapacitacion.codigocapacitacion}" >
+                         <option value="0">-- Seleccione la Capacitacion --</option>
                                 <option th:each="c:${capacitaciones}" th:value="${c.codigocapacitacion}" th:text="${c.nombrecapacitacion}"></option>
                             </select>
                     <!--<input type="number" class="form-control" th:field="*{codigocapacitacion.codigocapacitacion}"/>-->
