--- a/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadform.html
+++ b/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadform.html
@@ -22,6 +22,16 @@
                     <input type="text" class="form-control" th:field="*{codigonivelnivelescolaridad}"/>
                 </div>
             </div>-->
+<!--  <div class="form-group">
+                <label class="col-sm-2 control-label">Empleado:</label>
+                <div class="col-sm-10">
+                    <select class="form-control" th:field="*{codigoempleado.codigoempleado}" >
+                         <option value="0">-- Seleccione El empleado --</option>
+                                <option th:each="c:${empleados}" th:value="${c.codigoempleado}" th:text="${c.nombreempleado}"></option>
+                            </select>
+                    <input type="number" class="form-control" th:field="*{codigocapacitacion.codigocapacitacion}"/>
+                </div>
+            </div>-->
 <div class="form-group">
                 <label class="col-sm-2 control-label">Estudios realizados:(*)</label>
                 <div class="col-sm-10">
