--- a/src/main/resources/templates/fragments/otherreports/capacitacionesreport.html
+++ b/src/main/resources/templates/fragments/otherreports/capacitacionesreport.html
@@ -13,12 +13,16 @@
             <h3>GENERACION DE CAPCITACIONES
             </h3>
             <div>
-                <form class="form-horizontal" id="formreport">
+                <form class="form-horizontal" id="formreport" th:object="${capacitaciones}">
 
-                    <div class="form-group">
-                        <label class="col-sm-3 control-label" >Codigo de empleado:</label>
+                   <div class="form-group">
+                        <label class="col-sm-3 control-label" >Nombre Capacitacion:</label>
                         <div class="col-sm-8">
-                            <input type="text" class="form-control" id="codigo" name="codigo"/>
+                            <select class="form-control" id="codigo" name="codigo">
+                            <option value="0">-- Seleccione la Capacitacion --</option>
+                            <option th:each="d:${capacitaciones}" th:value="${d.codigocapacitacion}" th:text="${d.nombrecapacitacion}"></option>
+                            </select>
+                            <!--<input type="text" class="form-control" id="codigo" name="codigo"/>-->
                         </div>
                     </div>
                      <div class="form-group">    
