--- a/src/main/resources/templates/fragments/otherreports/constanciasalarialesreport.html
+++ b/src/main/resources/templates/fragments/otherreports/constanciasalarialesreport.html
@@ -13,12 +13,16 @@
             <h3>GENERACION DE CONSTANCIA SALARIAL
             </h3>
             <div>
-                <form class="form-horizontal" id="formreport">
+                <form class="form-horizontal" id="formreport" th:object="${empleados}">
 
                     <div class="form-group">
-                        <label class="col-sm-3 control-label" >Codigo de empleado:</label>
+                        <label class="col-sm-3 control-label" >Nombre de Empleado:</label>
                         <div class="col-sm-8">
-                            <input type="text" class="form-control" id="codigo" name="codigo"/>
+                            <select class="form-control" id="codigo" name="codigo">
+                            <option value="0">-- Seleccione El Empleado --</option>
+                            <option th:each="d:${empleados}" th:value="${d.codigoempleado}" th:text="${d.nombreempleado}"></option>
+                            </select>
+                            <!--<input type="text" class="form-control" id="codigo" name="codigo"/>-->
                         </div>
                     </div>
                      <div class="form-group">    
