--- a/src/main/resources/templates/fragments/otherreports/constanciaserviciosreport.html
+++ b/src/main/resources/templates/fragments/otherreports/constanciaserviciosreport.html
@@ -15,10 +15,14 @@
             <div>
                 <form class="form-horizontal" id="formreport">
 
-                    <div class="form-group">
-                        <label class="col-sm-3 control-label" >Codigo de empleado:</label>
+                   <div class="form-group">
+                        <label class="col-sm-3 control-label" >Nombre de Empleado:</label>
                         <div class="col-sm-8">
-                            <input type="text" class="form-control" id="codigo" name="codigo"/>
+                            <select class="form-control" id="codigo" name="codigo">
+                            <option value="0">-- Seleccione El Empleado --</option>
+                            <option th:each="d:${empleados}" th:value="${d.codigoempleado}" th:text="${d.nombreempleado}"></option>
+                            </select>
+                            <!--<input type="text" class="form-control" id="codigo" name="codigo"/>-->
                         </div>
                     </div>
                      <div class="form-group">    
