--- a/src/main/resources/templates/fragments/capacitacion/capacitacionform.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitacionform.html
@@ -4,6 +4,7 @@
     <head lang="en">
 
         <title>Nueva Capacitacion</title>
+         <th:block th:include="../templates/header"></th:block>
         <link rel="stylesheet"
 	th:href="@{/css/bootstrap.min.css}" />
 <link rel="stylesheet"
