--- a/src/main/resources/templates/fragments/costocapacitacion/costocapacitacionform.html
+++ b/src/main/resources/templates/fragments/costocapacitacion/costocapacitacionform.html
@@ -23,20 +23,20 @@
             <div class="form-group">
                 <label class="col-sm-2 control-label">Costo Por Persona:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control num_decimal" required="true" th:field="*{costopersona}"/>
+                    <input type="text" class="form-control num_decimal" required="true" maxlength="6" th:field="*{costopersona}"/>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label">Numero de Personas:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control numeros" required="true" th:field="*{numeropersona}"/>
+                    <input type="text" class="form-control numeros" required="true" maxlength="2" th:field="*{numeropersona}"/>
                 </div>
             </div>
             
             <div class="form-group">
                 <label class="col-sm-2 control-label">Costo Capacitador:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control num_decimal" required="true" th:field="*{costocapacitador}"/>
+                    <input type="text" class="form-control num_decimal"  required="true" maxlength="6" th:field="*{costocapacitador}"/>
                 </div>
             </div>
             <div class="form-group">
