agregado modificaiones a reportes abogados, notarios y motoristas

--- a/src/main/resources/templates/fragments/otherreports/notariosreport.html
+++ b/src/main/resources/templates/fragments/otherreports/notariosreport.html
@@ -14,12 +14,12 @@
             <div>
                 <form class="form-horizontal" id="formreport">
 
-                    <div class="form-group">
+<!--                    <div class="form-group">
                         <label class="col-sm-3 control-label" >Codigo de empleado:</label>
                         <div class="col-sm-8">
                             <input type="text" class="form-control" id="codigo" name="codigo"/>
                         </div>
-                    </div>
+                    </div>-->
                      <div class="form-group">    
                         <label class="col-sm-3 control-label">Fecha Inicial:</label>
                         <div class="col-sm-3">
