--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -191,13 +191,13 @@
                                   <li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Reportes<span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
 					<ul class="dropdown-menu forAnimate" role="menu">
-						<li><a href="#" th:href="@{/otherreports/abogados}">Reporte de Abogados</a></li>
-						<li><a href="#" th:href="@{/otherreports/empleadoincapacidad}">Reporte de Empleados con incapacidad</a></li>
-						<li><a href="#" th:href="@{/otherreports/hijoscapesp}">Reporte de empleados con hijos con capacidades especiales</a></li>
-						<li><a href="#" th:href="@{/otherreports/historial}">Reporte de Historial Laboral</a></li>
-						<li><a href="#" th:href="@{/otherreports/motoristas}">Reporte de Motoristas</a></li>
-						<li><a href="#" th:href="@{/otherreports/notarios}">Reporte de Notarios</a></li>
-						<li><a href="#" th:href="@{/otherreports/renuncias}">Reporte de renuncias</a></li>
+						<li><a href="#" th:href="@{/otherreports/abogados/}">Reporte de Abogados</a></li>
+						<li><a href="#" th:href="@{/otherreports/empleadoincapacidad/}">Reporte de Empleados con incapacidad</a></li>
+						<li><a href="#" th:href="@{/otherreports/hijoscapesp/}">Reporte de empleados con hijos con capacidades especiales</a></li>
+						<li><a href="#" th:href="@{/otherreports/historial/}">Reporte de Historial Laboral</a></li>
+						<li><a href="#" th:href="@{/otherreports/motoristas/}">Reporte de Motoristas</a></li>
+						<li><a href="#" th:href="@{/otherreports/notarios/}">Reporte de Notarios</a></li>
+						<li><a href="#" th:href="@{/otherreports/renuncias/}">Reporte de renuncias</a></li>
                                                 <li><a href="#" th:href="@{/otherreports/comites/}">Reporte de comites</a></li>
                                                 <li><a href="#" th:href="@{/otherreports/capacitaciones/}">Reporte de capacitaciones</a></li>
                                                 <li><a href="#" th:href="@{/otherreports/cumpleanieros/}">Reporte de cumpleanieros</a></li>
