--- a/src/main/resources/templates/fragments/comision/comisiones.html
+++ b/src/main/resources/templates/fragments/comision/comisiones.html
@@ -43,7 +43,16 @@
                 type: "success",
                 icon: "success",
        }).then(function() {
-                location.href = '../../beneficios/';
+                location.href = '../../comisiones/';
+       }); 
+}
+    if([[${msg}]]===0){
+       swal({
+           
+                title: "Exito!",
+                text: "Registro Ingresado Exitosamente",
+                type: "success",
+                icon: "success",
        }); 
 }
     
