--- a/src/main/resources/templates/fragments/comision/comisionshow.html
+++ b/src/main/resources/templates/fragments/comision/comisionshow.html
@@ -28,14 +28,14 @@
              
                 
                  <div class="form-group">
-                    <label class="col-sm-2 control-label">Fecha de Inicio de Beneficio:</label>
+                    <label class="col-sm-2 control-label">Fecha de Inicio de Comision:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${comision.fechadesdecomision}">descripcion</p>
                     </div>
                 </div>
                 
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Fecha Fin de Beneficio:</label>
+                    <label class="col-sm-2 control-label">Fecha Fin de Comision:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${comision.fechahastacomision}">descripcion</p>
                     </div>
@@ -44,7 +44,7 @@
             </form>
              <div class="col-md-12">
                     <div class="row" align="center">
-                        <button type="button" class="btn btn-default"><a href="#" th:href="@{/comisiones/}">Regresar</a></button>
+                        <button type="button" class="btn btn-default"><a th:href="@{/comisiones/}">Regresar</a></button>
 
                     </div>
                 </div>
