--- a/src/main/resources/templates/fragments/otherreports/hijoscapespreport.html
+++ b/src/main/resources/templates/fragments/otherreports/hijoscapespreport.html
@@ -12,12 +12,16 @@
         <div class="col-md-8">
             <h3>GENERACION DE REPORTE DE PERSONAL CON HIJOS CON CAPACIDADES ESPECIALES</h3>
             <div>
-                <form class="form-horizontal" id="formreport">
+                <form class="form-horizontal" id="formreport" th:object="${empleados}">
 
                     <div class="form-group">
-                        <label class="col-sm-3 control-label" >Codigo de empleado:</label>
+                        <label class="col-sm-3 control-label" >Nombre de Empleado:</label>
                         <div class="col-sm-8">
-                            <input type="text" class="form-control" id="codigo" name="codigo"/>
+                            <select class="form-control" id="codigo" name="codigo">
+                            <option value="0">-- Seleccione El Empleado --</option>
+                            <option th:each="d:${empleados}" th:value="${d.codigoempleado}" th:text="${d.nombreempleado}"></option>
+                            </select>
+                            <!--<input type="text" class="form-control" id="codigo" name="codigo"/>-->
                         </div>
                     </div>
                      <div class="form-group">    
@@ -51,7 +55,7 @@
             dateFormat: 'yy-mm-dd'
         });
         $('#generar').click(function(){
-            $("#formreport").attr('action', '../pdf/'+ $("#codigo").val().toString());
+            $("#formreport").attr('action', '../hijoscapesp/'+ $("#codigo").val().toString());
             $("form#formreport").submit();
             
         });
